k8s/manifest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-webhook
  namespace: test-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-webhook
      webhook: "true"
  template:
    metadata:
      labels:
        app: test-webhook
        webhook: "true"
    spec:
      containers:
        - args:
            - ./webhook
            - --tls-cert-file=/webhook.local.config/certificates/cert.pem
            - --tls-private-key-file=/webhook.local.config/certificates/key.pem
            - 2>&1
          image: ypelud/test-mutating-webhook:latest
          imagePullPolicy: Always
          name: test-webhook
          ports:
            - containerPort: 443
              name: https
          resources: {}
          volumeMounts:
            - mountPath: /webhook.local.config/certificates
              name: webhook-certs
      volumes:
        - name: webhook-certs
          secret:
            secretName: test-webhook
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-webhook
  name: test-webhook
  namespace: test-webhook
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: "test-webhook"
    webhook: "true"
  type: ClusterIP
