k8s/maniferst.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-webhook
  namespace: test-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "sample-webhook"
      webhook: "true"
  template:
    metadata:
      labels:
        app: "sample-webhook"
        webhook: "true"
    spec:
      containers:
        - args:
            - --tls-cert-file=/webhook.local.config/certificates/tls.crt
            - --tls-private-key-file=/webhook.local.config/certificates/tls.key
            - --alsologtostderr
            - -v=4
            - 2>&1
          image: webhook
          imagePullPolicy: Never
          name: test-webhook
          ports:
            - containerPort: 443
              name: https
          resources: {}
          volumeMounts:
            - mountPath: /webhook.local.config/certificates
              name: webhook-certs
      volumes:
        - name: webhook-certs
          secret:
            secretName: test-webhook
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webhook
  name: test-webhook
  namespace: test-webhook
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
  selector:
    app: "sample-webhook"
    webhook: "true"
  type: ClusterIP
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: test-webhook
webhooks:
  - admissionReviewVersions: [ "v1", "v1beta1"]
    clientConfig:
      service:
        name: test-webhook
        namespace: test-webhook
        path: /add-label
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVwakNDQW80Q0NRQ1BYSjBLRXNTckVEQU5CZ2txaGtpRzl3MEJBUXNGQURBVU1SSXdFQVlEVlFRRERBbDMKWldKb2IyOHVZMkV3SUJjTk1qRXdOREF4TVRnek5qTTFXaGdQTWpFeE9EQTVNakF4T0RNMk16VmFNQlF4RWpBUQpCZ05WQkFNTUNYZGxZbWh2Ynk1allUQ0NBaUl3RFFZSktvWklodmNOQVFFQkJRQURnZ0lQQURDQ0Fnb0NnZ0lCCkFNUzNHOWp2Qks4MVpqMzNmemZhSmZqTnprQktVTVIzNTF4MmJROEdSeDc5elZVV3JLaXI3eHk3bDIySVgya1kKZFJ4ZmNBNEVBMGsvYXQ3RVpqN1RNZVlmd1N0OWFseldQOGdzQXJWWWdJRjJSRnpOVTV2SUxYY3crelNLVDZoRgpmZTZZZUFUSitr [...]
    failurePolicy: Fail
    name: webhook.test-webhook.com
    rules:
      - apiGroups: [ "*" ]
        apiVersions: ["*"]
        operations: [ "CREATE","UPDATE" ]
        resources: [ "*/*" ]
    sideEffects: None
    timeoutSeconds: 10
