k8s/mutating.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: test-webhook
webhooks:
  - admissionReviewVersions: [ "v1", "v1beta1"]
    clientConfig:
      service:
        name: test-webhook
        namespace: test-webhook
        path: /add-label
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRJd01USXlNVEV4TWpNMU9Wb1hEVE13TVRJeU1ERXhNak0xT1Zvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVpZCmFDeDRvZ3grcjgwdktXVlJuVS92MkxVN3BOTnpDdlBjY0NwazdadCtqc2RXaUdWNC9XOHkrbG1YMVBqY2FYYkkKZ0NyeHlLOHphd3o3bDdmYWFtUWszMTJaWmVRcGFFSzdXSGtkaXQweDlySUNCOTJmcXVEM3ZaQ3R3bjNSdHJTMwpMQ2Q2MmVxS3lK [...]
    failurePolicy: Fail
    name: test-webhook.test-webhook.com
    rules:
      - apiGroups: [ "*" ]
        apiVersions: ["*"]
        operations: [ "CREATE","UPDATE" ]
        resources: [ "*/*" ]
    sideEffects: None
    timeoutSeconds: 10
